# rp2040-doom

./: CMakeLists.txt  README.md  up.sh
src/: CMakeLists.txt  d_loop.c  i_main.c  m_controls.c
src/doom/: d_main.c  m_menu.c
src/pico/: CMakeLists.txt  i_input.c  i_system.c  i_video.c
src/pico/boards/: lilygo_t_display_rp2040_generic_i2s.h  picosystem.pio  pimoroni_display_2_audio_pack.h  pimoroni_picosystem.h
src/pico/mipi/: mipi_display.c
src/pico/mipi/include/: hagl_hal.h  mipi_display.h
